--- a/index.html
+++ b/index.html
@@ -44,8 +44,9 @@
         body {
             font-family: 'Open Sans', Helvetica, Arial, sans-serif;
         }
-        .header, .subheading {
+        .heading, .subheading {
             font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+            text-align: center;
         }
         p.lead {
             padding-top: 1.5%;
@@ -124,14 +125,14 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-            <img class="img-poaroid" src="http://placehold.it/480x300">
+            <img class="img-polaroid" src="http://placehold.it/480x300">
         </div>
 
           <div class="span5 actions">
             <div class="span8 offset2">
                 <div class="statistics">
                     <div class="span4">
-                        <div class="linediv-1">
+                        <div class="linediv-l">
                             <h3>1000</h3> <p>backers</p>
                         </div>
                     </div>
@@ -162,6 +163,49 @@
               </div>
           </div>
       </div>
+
+        <div class="row-fluid section1">
+            <div class="span5 offset1 asset">
+                <img class="img-polaroid" src="http://placehold.it/480x300">
+            </div>
+            <div class="span5 copy">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                    porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+                    mollis justo velit at nunc. Fusce nec egestas sem. Donec
+                    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+                    volutpat lorem ut congue malesuada. In facilisis scelerisque
+                    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+                    quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
+                    risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
+                    rutrum, nunc leo tempus nisl, eu mollis justo velit at
+                    nunc. Fusce nec egestas sem. Donec fringilla.
+                </p>
+            </div>
+        </div>
+
+        <div class="row-fluid section2">
+            <div class="span5 offset1 copy copy-right">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+                    porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
+                    mollis justo velit at nunc. Fusce nec egestas sem. Donec
+                    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
+                    volutpat lorem ut congue malesuada. In facilisis scelerisque
+                    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
+                    quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
+                    risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
+                    rutrum, nunc leo tempus nisl, eu mollis justo velit at
+                    nunc. Fusce nec egestas sem. Donec fringilla.
+                </p>
+            </div>
+            <div class="span5 asset">
+                <img class="img-polaroid" src="http://placehold.it/480x300">
+            </div>
+        </div>
+
 
         <div class="row-fluid faq">
             <div class="span10 offset1">
@@ -196,6 +240,7 @@
                 </div>
             </div>
         </div>
+
 
     </div>
   </body>
