--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My First Bitstarter</title>
+    <title>SMB All-In-One Hosted Website</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link type="text/css" rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
       <link type="text/css" rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -52,6 +52,7 @@
             padding-top: 1.5%;
             font-size: 24px;
             line-height: 30px;
+            text-align: justify;
         }
         p {
             font-size: 18px;
@@ -100,7 +101,7 @@
                      <span class="icon-bar"></span>
                      <span class="icon-bar"></span>
                  </button>
-                <a class="brand" href="#">Bitstarter</a>
+                <a class="brand" href="#">SMB All-In-One Hosted Website</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
                         <li class="active"><a href="#">Home</a></li>
@@ -115,12 +116,12 @@
     <div class="container">
       <div class="row-fluid heading">
          <div class="span12">
-             <h1>Product</h1>
+             <h1>SMB All-In-One Hosted Website</h1>
          </div>
       </div>
       <div class="row-fluid subheading">
         <div class="span12">
-            <p class="lead">One sentence description.</p>
+            <p class="lead">As more professionals launch their own business (accountants, lawyers, doctors, dentists), they come with a wealth of knowledge in their own fields but little expertise on what it takes to launch a successful, secure and safe website.  Our solution is to provide a best-in-class website for these professionals which allows them to focus on their high value work while giving them the best features and security needed for their online presence.</p>
         </div>
       </div>
       <div class="row-fluid pitch">
@@ -133,31 +134,31 @@
                 <div class="statistics">
                     <div class="span4">
                         <div class="linediv-l">
-                            <h3>1000</h3> <p>backers</p>
+                            <h3>2</h3> <p>backers</p>
                         </div>
                     </div>
                     <div class="span4">
                         <div class="linediv-c">
-                            <h3>$6000</h3> <p>of $10,000</p>
+                            <h3>$100</h3> <p>of $5000</p>
                         </div>
                     </div>
                     <div class="span4">
                         <div class="linediv-r">
-                            <h3>10</h3> <p>days left</p>
+                            <h3>90</h3> <p>days left</p>
                         </div>
                     </div>
                 </div>
             </div>
               <div class="span10 offset1">
                   <div class="thermometer progress active">
-                      <div class="bar bar-success" style="width: 60%;"></div>
-                      <div class="bar bar-warning" style="width: 40%;"></div>
+                      <div class="bar bar-success" style="width: 1%;"></div>
+                      <div class="bar bar-warning" style="width: 99%;"></div>
                   </div>
               </div>
               <div class="span6 offset3 order">
-                  <button class="btn btn-success btn-large">Preorder</button>
+                  <button class="btn btn-success btn-large">I'm Interested</button>
               </div>
-              <div class="span8 offset2 social">
+             <div class="span8 offset2 social">
                   <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
                   <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
               </div>
